# soaricarus_auth

./: .env.docker.sample  .env.local.sample  Cargo.toml  Dockerfile  LICENSE.md  README.md  docker-compose.yaml
.gitea/workflows/: tag_release.yml  workflow.yml
src/: main.rs
src/callers/: login.rs  register.rs
src/db/: init.rs
src/repo/: mod.rs
src/token_stuff/: mod.rs
